--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
       <p><strong>Tech Stack:</strong> Google Analytics, SQL</p>
       <p><strong>Analytics Concept:</strong> Web traffic analysis and funnel optimization</p>
       <p><strong>Process:</strong> Extracted traffic data via SQL, identified high drop-off pages, recommended UI improvements to reduce bounce rates.</p>
-      <a href="https://github.com/yourusername/your-repo-name/tree/main/Excel/Superstore%20Sales%20Data%20Cleaning%20Using%20Power%20Query" target="_blank">
-    Superstore Sales Data Cleaning (Excel, Power Query)</a>
+      <a class="btn" href="https://github.com/yourusername/your-repo-name/tree/main/Excel/Superstore%20Sales%20Data%20Cleaning%20Using%20Power%20Query" target="_blank">
+  View Project on GitHub
+</a>
+
 
     </div>
 
