--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
       <p><strong>Tech Stack:</strong> Google Analytics, SQL</p>
       <p><strong>Analytics Concept:</strong> Web traffic analysis and funnel optimization</p>
       <p><strong>Process:</strong> Extracted traffic data via SQL, identified high drop-off pages, recommended UI improvements to reduce bounce rates.</p>
-     <a href="https://github.com/FridaAchieng/Data-Analysis-Portfolio/tree/main/Excel/Superstore%20Sales%20Data%20Cleaning%20Using%20Power%20Query" target="_blank">
-  View Superstore Sales Data Cleaning Project
-</a>
+      <a href="https://github.com/FridaAchieng/Data-Analysis-Portfolio/tree/main/Excel/Superstore%20Sales%20Data%20Cleaning%20Using%20Power%20Query" target="_blank" rel="noopener noreferrer">View Project on GitHub</a>
 
 
 
