--- a/index.html
+++ b/index.html
@@ -49,18 +49,21 @@
 
     <div class="project-card">
       <img src="https://via.placeholder.com/400x200?text=Traffic+Analysis" alt="Website Traffic Analysis screenshot" class="project-image" />
-      <h3>Website Traffic Analysis</h3>
-      <p><strong>Purpose:</strong> Analyze user behavior to improve website conversion rates.</p>
-      <p><strong>Tech Stack:</strong> Google Analytics, SQL</p>
-      <p><strong>Analytics Concept:</strong> Web traffic analysis and funnel optimization</p>
-      <p><strong>Process:</strong> Extracted traffic data via SQL, identified high drop-off pages, recommended UI improvements to reduce bounce rates.</p>
-     <a href="https://github.com/FridaAchieng/Data-Analysis-Portfolio/tree/main/Excel/Superstore%20Sales%20Data%20Cleaning%20Using%20Power%20Query" target="_blank" rel="noopener noreferrer" class="btn-primary">
-  View Project on GitHub
-</a>
-
-</div>
-
+      <section class="project">
+  <h3>Superstore Sales Data Cleaning Using Power Query</h3>
+  <p><strong>Purpose:</strong><br>
+  To clean and standardize two batches of sales data with inconsistent formats, missing values, and duplicates to enable accurate reporting and analysis.</p>
+  <p><strong>Tech Stack:</strong><br>
+  Microsoft Excel (Power Query Editor), Power Query M Language, Excel formulas</p>
+  <p><strong>Analytics Concept:</strong><br>
+  Data cleaning, data transformation, and data integration for reliable analytics.</p>
+  <p><strong>Process:</strong><br>
+  Appended data batches; split customer information; cleaned date formats; standardized categorical fields (State, Ship Mode); corrected numerical values (Sales, Quantity).</p>
+  <a href="https://github.com/FridaAchieng/Data-Analysis-Portfolio/tree/main/Excel/Superstore%20Sales%20Data%20Cleaning%20Using%20Power%20Query" target="_blank" rel="noopener noreferrer" class="btn-primary">
+    View Project on GitHub
+  </a>
   </div>
+
 </section>
 <section class="tech-stack" id="tech-stack">
   <h2>Tech Stack</h2>
